--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,13 +2,19 @@ version: '3.4'
 
 services:
   snackhub.payment.api:
+    restart: always
     environment:
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=${PASSWORD_ENV_SEEDED}
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/aspnetapp.pfx
+      - APPDATA=/home/kalleimob/apiConfig
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
+      - ASPNETCORE_HTTP_PORTS=80
+      - ASPNETCORE_HTTPS_PORTS=443
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - PASSWORD_ENV_SEEDED=${PASSWORD_ENV_SEEDED}
     ports:
-      - "8080"
-      - "8081"
+      - "8098:80"
+      - "8099:443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
