--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,5 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  call-build:
     uses: ./.github/workflows/build.yml
-    with:
-      my_input: novo teste
