--- a/.vsCode/settings.json
+++ b/.vsCode/settings.json
@@ -3,7 +3,7 @@
     "editor.fontFamily": "Source Code Pro", // Fonte  
     "editor.fontSize": 18, // Tamanho da Fonte  
     "workbench.colorTheme": "Atom One Dark", // Tema  
-    "workbench.iconTheme": "vscode-icons", // Pacote de Ícones  
+    "workbench.iconTheme": "material-icon-theme", // Pacote de Ícones  
     "workbench.startupEditor": "newUntitledFile", // Abre sempre um arquivo em branco  
     "editor.minimap.enabled": false, // Desabilita o Mini Map  
     "workbench.panel.defaultLocation": "right", // Deixa o terminal a direita  
