--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -4,6 +4,8 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
+  env:
+      PASSWORD_ENV_SEEDED: ${{ secrets.PASSWORD_ENV_SEEDED }}
 
 jobs:
   build-and-test:
