--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -11,8 +11,33 @@ jobs:
     runs-on: [self-hosted, vmbuild]
     env:
       PASSWORD_ENV_SEEDED: ${{ secrets.PASSWORD_ENV_SEEDED }}
+      IMAGE: "ghcr.io/snackhubpaymentapi"
     steps:
       - uses: actions/checkout@v4
 
+      - name: Docker Login
+        run: docker login ghcr.io -u kale19991 -p ${{ secrets.repositorycontainer }}
+
       - name: Build Image
-        run: docker compose build
+        run: docker compose buil
+      
+      - name: Push Image
+        run: docker push ${{ env.IMAGE}}
+
+  Deploy:
+    name: "Build docker compose"
+    runs-on: [self-hosted, vmprod]
+    env:
+      PASSWORD_ENV_SEEDED: ${{ secrets.PASSWORD_ENV_SEEDED }}
+      IMAGE: "ghcr.io/snackhubpaymentapi"
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Docker Login
+        run: docker login ghcr.io -u kale19991 -p ${{ secrets.repositorycontainer }}
+      
+      - name: Docker pull image
+        run: docker pull image ${{ env.IMAGE }}
+
+      - name: Execute script de deploy
+        run: bash .github/workflows/deploy/deploy.sh --env ${{ env.IMAGE }}
