--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -25,7 +25,7 @@ jobs:
         run: docker push ${{ env.IMAGE}}
 
   Deploy:
-    name: "Build docker compose"
+    name: "Deploy development"
     runs-on: [self-hosted, vmprod]
     needs: build-and-test
     env:
