--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -45,8 +45,12 @@ jobs:
           username: '${{ github.actor }}'
           password: '${{ secrets.GITHUB_TOKEN }}'
 
-      - name: Docker Login
-        run: docker login ghcr.io -u kale19991 -p ${{ secrets.repositorycontainer }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: '${{ github.actor }}'
+          password: '${{ secrets.GITHUB_TOKEN }}'
       
       - name: Docker pull image
         run: docker pull ${{ env.IMAGE }}
