--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build Image
         run: docker compose build
       
+      - name: Build down
+        run: docker compose down
+      
       - name: Push Image
         run: docker push ${{ env.IMAGE}}
 
