--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,11 +22,8 @@ jobs:
           username: '${{ github.actor }}'
           password: '${{ secrets.GITHUB_TOKEN }}'
 
-      - name: Build Docker image
-        run: |
-          docker build \
-            --build-arg PASSWORD_ENV_SEEDED=${{ secrets.PASSWORD_ENV_SEEDED }} \
-            -t ${{ env.IMAGE }} .
+      - name: Build Image
+        run: docker compose build
       
       - name: Push Image
         run: docker push ${{ env.IMAGE}}
