--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker push ${{ env.IMAGE}}
 
   Deploy:
-    name: "Deploy development teste"
+    name: "Deploy development"
     runs-on: [self-hosted, vmprod]
     needs: build-and-test
     if: github.ref == 'refs/heads/develop'
