--- a/src/SnackHub.Payment.Application/SnackHub.Payment.Application.csproj
+++ b/src/SnackHub.Payment.Application/SnackHub.Payment.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SnackHub.Payment.Domain\SnackHub.Payment.Domain.csproj" />
+    <ProjectReference Include="..\SnackHub.Payment.Infra\SnackHub.Payment.Infra.csproj" />
   </ItemGroup>
 
   <ItemGroup>
