--- a/src/SnackHub.Payment.Application/SnackHub.Payment.Application.csproj
+++ b/src/SnackHub.Payment.Application/SnackHub.Payment.Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-rc.2.24473.5" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
 </Project>
