--- a/src/SnackHub.Payment.Api/appsettings.json
+++ b/src/SnackHub.Payment.Api/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=SnackHubPayment.db"
+  },
+  "ConfiguracaoApp": {
+    "MercadoPago": {
+      "BaseUrl": "https://api.mercadopago.com/v1",
+      "PublicKey": "TEST-71cb0a0e-b5f8-4883-b5c4-c527223c4096",
+      "AccessToken": "TEST-71cb0a0e-b5f8-4883-b5c4-c527223c4096"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
