--- a/test/SnackHub.Payment.Test/SnackHub.Payment.Test.csproj
+++ b/test/SnackHub.Payment.Test/SnackHub.Payment.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>false</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
@@ -10,23 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="6.0.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Reqnroll.NUnit" Version="2.2.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
+    <PackageReference Include="FluentAssertions" Version="6.2.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+    <PackageReference Include="Testcontainers.PostgreSql" Version="4.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10"/>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\SnackHub.Payment.Api\SnackHub.Payment.Api.csproj" />
     <ProjectReference Include="..\..\src\SnackHub.Payment.Application\SnackHub.Payment.Application.csproj" />
     <ProjectReference Include="..\..\src\SnackHub.Payment.Domain\SnackHub.Payment.Domain.csproj" />
-    <ProjectReference Include="..\..\src\SnackHub.Payment.Ioc\SnackHub.Payment.Ioc.csproj" />
   </ItemGroup>
 
 </Project>
