--- a/src/SnackHub.Payment.Application/SnackHub.Payment.Application.csproj
+++ b/src/SnackHub.Payment.Application/SnackHub.Payment.Application.csproj
@@ -13,8 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="EventConsumers\" />
+    <Folder Include="EventConsumers\Order\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
