--- a/src/SnackHub.Payment.Api/SnackHub.Payment.Api.csproj
+++ b/src/SnackHub.Payment.Api/SnackHub.Payment.Api.csproj
@@ -7,15 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.1" />
 
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SnackHub.Payment.Application\SnackHub.Payment.Application.csproj" />
     <ProjectReference Include="..\SnackHub.Payment.Infra\SnackHub.Payment.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage" />
+  </ItemGroup>
+  
 </Project>
