--- a/src/SnackHub.Payment.Api/SnackHub.Payment.Api.csproj
+++ b/src/SnackHub.Payment.Api/SnackHub.Payment.Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.1" />
 
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11"/>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SnackHub.Payment.Application\SnackHub.Payment.Application.csproj" />
