--- a/src/SnackHub.Payment.Api/appsettings.json
+++ b/src/SnackHub.Payment.Api/appsettings.json
@@ -1,16 +1,16 @@
 {
-  "ConnectionStrings": {
-    "Default": "Data Source=SnackHubPayment.db"
-  },
-  "Settings": {
-    "Endpoint": {
-      "BasePath": "api/v1"
-    },
-    "MercadoPago": {
-      "BaseUrl": "https://api.mercadopago.com/v1",
-      "PublicKey": "TEST-71cb0a0e-b5f8-4883-b5c4-c527223c4096",
-      "AccessToken": "TEST-246833897341846-110718-9c40f4dc3745cf52633be299150f1049-430140632"
+  "Storage": {
+    "PostgreSQL": {
+      "Host": "localhost",
+      "UserName": "postgres",
+      "Password": "postgres",
+      "Database": "SnackHub-PaymentService"
     }
+  },
+  "RabbitMQ" : {
+    "Host": "localhost",
+    "User": "guest",
+    "Password": "guest"
   },
   "Logging": {
     "LogLevel": {
