feat: adds api gateway client to mercado pago trough Refit;

--- a/src/SnackHub.Payment.Api/appsettings.json
+++ b/src/SnackHub.Payment.Api/appsettings.json
@@ -12,6 +12,9 @@
     "User": "guest",
     "Password": "guest"
   },
+  "ApiGateway": {
+    "MercadoPagoEndpoint": "https://api.mercadopago.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
