--- a/src/SnackHub.Payment.Api/SnackHub.Payment.Api.csproj
+++ b/src/SnackHub.Payment.Api/SnackHub.Payment.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.1" />
 
